finalni verze az po TOR?

--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -94,6 +94,45 @@
   year={2014},
   publisher={Sage Publications Sage UK: London, England}
 }
+@article{van2013surfing,
+  title={‘Surfing the Silk Road’: A study of users’ experiences},
+  author={Van Hout, Marie Claire and Bingham, Tim},
+  journal={International Journal of Drug Policy},
+  volume={24},
+  number={6},
+  pages={524--529},
+  year={2013},
+  publisher={Elsevier}
+}
+@article{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi},
+  year={2008}
+}
+
+@article{aldridge2014not,
+  title={Not an'Ebay for Drugs': the Cryptomarket'Silk Road'as a paradigm shifting criminal innovation},
+  author={Aldridge, Judith and D{\'e}cary-H{\'e}tu, David},
+  year={2014}
+}
+@article{cox2016staying,
+  title={Staying in the shadows: The use of bitcoin and encryption in cryptomarkets},
+  author={Cox, Joseph},
+  journal={Internet and drug markets, EMCDDA insights},
+  pages={41--47},
+  year={2016},
+  publisher={Publications Office of the European Union, Luxembourg}
+}
+@article{tzanetakis2016transparency,
+  title={The transparency paradox. Building trust, resolving disputes and optimising logistics on conventional and online drugs markets},
+  author={Tzanetakis, Meropi and Kamphausen, Gerrit and Werse, Bernd and von Laufenberg, Roger},
+  journal={International Journal of Drug Policy},
+  volume={35},
+  pages={58--68},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @article{dolliver2016characteristics,
   title={Characteristics of drug vendors on the Tor network: a cryptomarket comparison},
   author={Dolliver, Diana S and Kenney, Jennifer L},
