--- a/diplomka-text/citations.bib
+++ b/diplomka-text/citations.bib
@@ -104,6 +104,75 @@
   year={2013},
   publisher={Elsevier}
 }
+
+@inproceedings{wehinger2011dark,
+  title={The Dark Net: Self-regulation dynamics of illegal online markets for identities and related services},
+  author={Wehinger, Frank},
+  booktitle={Intelligence and Security Informatics Conference (EISIC), 2011 European},
+  pages={209--213},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{barratt2014use,
+  title={Use of Silk Road, the online drug marketplace, in the United Kingdom, Australia and the United States},
+  author={Barratt, Monica J and Ferris, Jason A and Winstock, Adam R},
+  journal={Addiction},
+  volume={109},
+  number={5},
+  pages={774--783},
+  year={2014},
+  publisher={Wiley Online Library}
+}
+
+@article{van2014responsible,
+  title={Responsible vendors, intelligent consumers: Silk Road, the online revolution in drug trading},
+  author={Van Hout, Marie Claire and Bingham, Tim},
+  journal={International Journal of Drug Policy},
+  volume={25},
+  number={2},
+  pages={183--189},
+  year={2014},
+  publisher={Elsevier}
+}
+@article{paquet2017cryptomarkets,
+  title={Are Cryptomarkets the Future of Drug Dealing? Assessing the Structure of the Drug Market Hosted on Cryptomarkets},
+  author={Paquet-Clouston, Masarah-Cynthia},
+  year={2017}
+}
+@inproceedings{moser2013inquiry,
+  title={An inquiry into money laundering tools in the Bitcoin ecosystem},
+  author={Moser, Malte and Bohme, Rainer and Breuker, Dominic},
+  booktitle={eCrime Researchers Summit (eCRS), 2013},
+  pages={1--14},
+  year={2013},
+  organization={IEEE}
+}
+
+@inproceedings{motoyama2011analysis,
+  title={An analysis of underground forums},
+  author={Motoyama, Marti and McCoy, Damon and Levchenko, Kirill and Savage, Stefan and Voelker, Geoffrey M},
+  booktitle={Proceedings of the 2011 ACM SIGCOMM conference on Internet measurement conference},
+  pages={71--80},
+  year={2011},
+  organization={ACM}
+}
+
+@techreport{dingledine2004tor,
+  title={Tor: The second-generation onion router},
+  author={Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+  year={2004},
+  institution={Naval Research Lab Washington DC}
+}
+@book{Zimmermann:1995:OPU:202735,
+ author = {Zimmermann, Philip R.},
+ title = {The Official PGP User's Guide},
+ year = {1995},
+ isbn = {0-262-74017-6},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
 @article{nakamoto2008bitcoin,
   title={Bitcoin: A peer-to-peer electronic cash system},
   author={Nakamoto, Satoshi},
